--- a/templates/home/principal.html
+++ b/templates/home/principal.html
@@ -1,143 +1,98 @@
+{% extends 'base.html' %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Receitas de Ouro</title>
-    <link rel="stylesheet" href="{% static '/css/style.css' %}">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="{% static 'js/theme.js' %}"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+{% block title %} Receitas de Ouro{% endblock%}
+{% block content %}
 
-</head>
-<body>
-    <header>
-        <nav class="navbar navbar-expand-sm nav-top">
-            <div class="container-fluid">
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="mynavbar">
-                    <ul class="navbar-nav me-auto">
-                        <li class="nav-item">
-                            <a class="nav-link" href="#mynavbar">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#receitas">Receitas</a>
-                        </li>
-                    </ul>
+<!--Carrocel-->
+<div id="demo" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-indicators">
+        <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
+        <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
+        <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
+    </div>
 
-                      <!-- Botão tema -->
-                <label class="switch">
-                    <input type="checkbox" id="toggle-theme">
-                    <span class="slider">
-                      <i class="fas fa-moon" id="toggle-icon"></i> <!-- ícone muda dinamicamente -->
-                    </span>
-                  </label>           
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img src="{% static 'img/feijoada.jpg' %}" alt="Feijoada" class="d-block w-100 car-img">
+            <div class="carousel-caption">
+                <h3>Feijoada</h3>
 
-                </div>
             </div>
-        </nav>
-       
-    </header>
-    <main>
-        <div id="demo" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-indicators">
-               <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
-                <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
-                <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
-            </div>
-
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="{% static 'img/feijoada.jpg' %}" alt="Feijoada" class="d-block w-100 car-img">
-                    <div class="carousel-caption">
-                        <h3>Feijoada</h3>
-                       
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="{% static 'img/bolo de milho.jpg' %}" alt="Arroz com Pequi" class="d-block w-100 car-img">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>Bolo de milho</h5> 
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="{% static 'img/arrozcompequii.jpg' %}" alt="Arroz com Pequi" class="d-block w-100 car-img">
-                    <div class="carousel-caption">
-                        <h3>Arroz com Pequi</h3>
-                        
-                    </div>
-                </div>
-            </div>
-
-            <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon"></span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
-                <span class="carousel-control-next-icon"></span>
-            </button>
         </div>
+        <div class="carousel-item">
+            <img src="{% static 'img/bolo de milho.jpg' %}" alt="Arroz com Pequi" class="d-block w-100 car-img">
+            <div class="carousel-caption d-none d-md-block">
+                <h5>Bolo de milho</h5>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <img src="{% static 'img/arrozcompequii.jpg' %}" alt="Arroz com Pequi" class="d-block w-100 car-img">
+            <div class="carousel-caption">
+                <h3>Arroz com Pequi</h3>
 
-        <section class="row sec-receitas" id="receitas">
-            <div class="card col-3" style="width:300px">
-                <img class="card-img-top" src="{% static 'img/feijoada2.jpg' %}"alt="Card image">
-                <div class="card-body">
-                    <h4 class="card-title">Feijoada</h4>
-                    <p class="card-text">
-                        Um clássico da nossa culinária,
-                        a feijoada é um prato que possui algumas variações,
-                        mas todas bem deliciosas!... </p>
-                    <a href="{% url 'ver_receitas' %}" class="btn btn-success btn-card">Ver Receitas</a>
-                </div>
             </div>
-            <div class="card col-3" style="width:275px">
-                <img class="card-img-top" src="{% static 'img/arrozcompequii.jpg' %}" alt="Card image">
-                <div class="card-body">
-                    <h4 class="card-title">Arroz com Pequi</h4>
-                    <p class="card-text">
-                        “O arroz com pequi é 
-                        mais que um prato”
-                        é uma memória afetiva 
-                        para quem cresceu no
-                        cerrado. </p>
-                    <a href="{% url 'ver_receitas' %}" class="btn btn-success">Ver Receitas</a>
-                </div>
-            </div>
-            <div class="card col-3" style="width:300px">
-                <img class="card-img-top" src="{% static 'img/cuscuz.jpg' %}" alt="Card image">
-                <div class="card-body">
-                    <h4 class="card-title">Cuscuz Simples</h4>
-                    <p class="card-text">
-                        Se você procura uma opção 
-                        prática e saborosa para 
-                        complementar o seu café 
-                        da manhã ou lanche cuscuz é uma excelente opção.</p>
-                    <a href="{% url 'ver_receitas' %}" class="btn btn-success">Ver Receitas</a>
-                </div>
-            </div>
-            <div class="card col-3" style="width:300px">
-                <img class="card-img-top" src="{% static 'img/bolo de milho.jpg' %}" alt="Card image">
-                <div class="card-body">
-                    <h4 class="card-title">Bolo de milho</h4>
-                    <p class="card-text">
-                        O bolo é uma verdadeira 
-                        homenagem aos sabores 
-                        tradicionais da culinária 
-                        brasileira.</p>
-                    <a href="{% url 'ver_receitas' %}" class="btn btn-success">Ver Receitas</a>
-                </div>
-            </div>
-        </section>
+        </div>
+    </div>
 
-            
-    </main>
-    
-    <footer class="fixed-bottom">
-        <h5>&copy Receitas de Ouro</h5>           
-    </footer>
-    
-</body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-</html>
+    <!--controles esquerdo e direito-->
+    <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon"></span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
+        <span class="carousel-control-next-icon"></span>
+    </button>
+</div>
+
+<section class="row sec-receitas" id="receitas">
+    <div class="card col-3" style="width:300px">
+        <img class="card-img-top" src="{% static 'img/feijoada2.jpg' %}" alt="Card image">
+        <div class="card-body">
+            <h4 class="card-title">Feijoada</h4>
+            <p class="card-text">
+                Um clássico da nossa culinária,
+                a feijoada é um prato que possui algumas variações,
+                mas todas bem deliciosas!... </p>
+            <a href="{% url 'ver_receitas' %}" class="btn btn-success btn-card">Ver Receitas</a>
+        </div>
+    </div>
+    <div class="card col-3" style="width:275px">
+        <img class="card-img-top" src="{% static 'img/arrozcompequii.jpg' %}" alt="Card image">
+        <div class="card-body">
+            <h4 class="card-title">Arroz com Pequi</h4>
+            <p class="card-text">
+                “O arroz com pequi é
+                mais que um prato”
+                é uma memória afetiva
+                para quem cresceu no
+                cerrado. </p>
+            <a href="{% url 'ver_receitas' %}" class="btn btn-success">Ver Receitas</a>
+        </div>
+    </div>
+    <div class="card col-3" style="width:300px">
+        <img class="card-img-top" src="{% static 'img/cuscuz.jpg' %}" alt="Card image">
+        <div class="card-body">
+            <h4 class="card-title">Cuscuz Simples</h4>
+            <p class="card-text">
+                Se você procura uma opção
+                prática e saborosa para
+                complementar o seu café
+                da manhã ou lanche cuscuz é uma excelente opção.</p>
+            <a href="{% url 'ver_receitas' %}" class="btn btn-success">Ver Receitas</a>
+        </div>
+    </div>
+    <div class="card col-3" style="width:300px">
+        <img class="card-img-top" src="{% static 'img/bolo de milho.jpg' %}" alt="Card image">
+        <div class="card-body">
+            <h4 class="card-title">Bolo de milho</h4>
+            <p class="card-text">
+                O bolo é uma verdadeira
+                homenagem aos sabores
+                tradicionais da culinária
+                brasileira.</p>
+            <a href="{% url 'ver_receitas' %}" class="btn btn-success">Ver Receitas</a>
+        </div>
+    </div>
+</section>
+
+
+{% endblock %}
