--- a/templates/home/principal.html
+++ b/templates/home/principal.html
@@ -13,22 +13,22 @@
 
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="{% static 'img/feijoada.jpg' %}" alt="Feijoada" class="d-block w-100 car-img">
+            <img src="{% static 'img/chambaril.jpg' %}" alt="Feijoada" class="d-block w-100 car-img">
             <div class="carousel-caption">
-                <h3>Feijoada</h3>
+                <h3>Chambaril</h3>
 
             </div>
         </div>
         <div class="carousel-item">
-            <img src="{% static 'img/bolo de milho.jpg' %}" alt="Arroz com Pequi" class="d-block w-100 car-img">
+            <img src="{% static 'img/Bolo de milho cremoso.jpg' %}" alt="Bolo de milho cremoso" class="d-block w-100 car-img">
             <div class="carousel-caption d-none d-md-block">
                 <h5>Bolo de milho</h5>
             </div>
         </div>
         <div class="carousel-item">
-            <img src="{% static 'img/arrozcompequii.jpg' %}" alt="Arroz com Pequi" class="d-block w-100 car-img">
+            <img src="{% static 'img/frango com pequi.jpg' %}" alt="Frango com Pequi" class="d-block w-100 car-img">
             <div class="carousel-caption">
-                <h3>Arroz com Pequi</h3>
+                <h3>Frango com Pequi</h3>
 
             </div>
         </div>
