--- a/home/static/css/style.css
+++ b/home/static/css/style.css
@@ -253,3 +253,10 @@ footer{ /*Borda inferior (footer)*/
     padding-left: 30px !important;
   }
 
+@media (max-width: 768px){
+  #carousel-receitas {
+    margin-bottom: 4em !important;
+  }
+}
+
+
